--- a/components/layout/styles.css
+++ b/components/layout/styles.css
@@ -40,10 +40,10 @@
   }
 }
 
-/* html,
+html,
 body {
-  background-color: #fec7d7;
-} */
+  background-color: #f8f9fa;
+}
 
 .wrapper {
   --bg: #f9f8fc;
